# Todo10kr

./: .gitignore  CLAUDE.md  README.md  projectspecs.md
agent/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/data/fixtures/: web_search_fixtures.json
agent/data/goals/: cold_outreach.md  learn_spanish.md  yc_application.md
agent/data/resources/: cold_email_guide.md
agent/scripts/: run_demo.py
agent/src/milestone_agent/: __init__.py  cli.py  config.py  llm.py  schemas.py
agent/src/milestone_agent/api/: __init__.py  server.py
agent/src/milestone_agent/graph/: __init__.py  builder.py  prompts.py  runner.py
agent/src/milestone_agent/rag/: __init__.py  embeddings.py  ingest.py  store.py
agent/src/milestone_agent/tools/: __init__.py  draft_email.py  fetch_url.py  search_goal_context.py  search_resource.py  web_search.py
agent/tests/: test_smoke.py
backend/: package-lock.json  package.json
backend/src/: server.js
backend/src/agents/goal/: GoalAgent.js  (+1 more)
backend/src/config/: env.js
backend/src/data/: todos.js
backend/src/routes/: gcal.routes.js  goals.routes.js  schedule.routes.js  todos.routes.js
backend/src/services/: gcal.service.js  openai.service.js
backend/src/utils/: freeSlots.js  scheduleTime.js
frontend/: .gitignore  package-lock.json
frontend/src/: App.css  App.jsx
frontend/src/api/: gcal.js  goals.js  schedule.js  todos.js
frontend/src/components/: AppLayout.jsx  MobileNav.jsx  Sidebar.jsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: Calendar.jsx  Dashboard.jsx  Goals.jsx
